--- a/package.json
+++ b/package.json
@@ -4,8 +4,64 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "nodemon server.js",
+    "dev-client": "webpack-dev-server --config ./config/webpack.client.js",
+    "dev-server": "webpack -w --config ./config/webpack.server.js",
+    "dev": "run-p dev-client dev-server nodemon",
+    "clean": "rimraf ./dist/",
+    "build-client": "cross-env NODE_ENV=production webpack --config ./config/webpack.client.js",
+    "build-server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.js",
+    "build-all": "run-p build-client build-server",
+    "build": "run-s clean build-all",
+    "start": "node server.js"
   },
   "author": "Will Constable",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/runtime": "^7.8.4",
+    "axios": "^0.19.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
+    "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "fs": "^0.0.1-security",
+    "mini-css-extract-plugin": "^0.7.0",
+    "npm-run-all": "^4.1.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "path": "^0.12.7",
+    "terser-webpack-plugin": "^4.2.1",
+    "url-loader": "^1.1.2",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0",
+    "vue-meta": "^2.0.3",
+    "vue-router": "^3.0.6",
+    "vue-server-renderer": "^2.6.10",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
+    "vuex-router-sync": "^5.0.0",
+    "webpack": "^4.32.2",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "cross-env": "^6.0.3",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-vue": "^5.2.2",
+    "prettier": "^1.18.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue-hot-reload-api": "^2.3.3",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-middleware": "^3.7.3",
+    "webpack-dev-server": "^3.5.1"
+  }
 }
